[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2"
bracket-random = "0.8"
clap = { version = "3.2.17", features = ["yaml"] }
colored = "2.0"
console = "0.15"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"

[dev-dependencies]
assert-json-diff = "2.0"
lazy_static = "1.0"
ntest = "0.8"
pretty_assertions = "1.2.1"
